Fixed alignment

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -87,7 +87,7 @@ header {
 }*/
 
 #third_section {
-	background-color: #EBEDF3;
+	background-color: white;
 	height: 100vh;
 	margin: 0;
 }
@@ -97,7 +97,7 @@ header {
 }
 #fourth_section {
 	height: 100vh;
-	background-color: white;
+	background-color: #EBEDF3;
 }
 
 #fourth_section > .skills {
@@ -113,17 +113,22 @@ header {
 
 
 #fifth_section {
-	background-color: #EBEDF3;
+	background-color: white;
 	height: 100vh;
 	margin: 0;
 }
+#fifth_section > .education {
+	padding-top: 50px;
+	width: 100%
+	margin-right: 80px;
+	text-align: center;
 
+}
 #fifth_section > .education .upd_shots {
-	width: 242px;
-	padding: 2px;
+	width: 220px;
 	margin-top: 80px;
-	margin-left: 7px;
-	display: inline-flex;
+/*	display: inline-flex;*/
+/*	text-align: center;*/
 }
 
 #fifth_section .education_texts {
@@ -132,13 +137,14 @@ header {
 }
 
 #fifth_section .education_texts .upm {
-	font-size:	50px;
+	font-size:	45px;
 	font-style: bold;
 }
 
-#fift_section > .education h2 {
+#fift_section > .education .education_texts .orcom {
 	text-align: center;
 	padding-top: 80px;
+	font-size: 25px;
 }
 
 #sixth_section {
@@ -154,10 +160,16 @@ header {
 	width: 20px;
 }
 
+form {
+	margin-left: 350px;
+	margin-right: 350px;
+
+}
+
 .footer {
 	background: #676767;
 	color:#EBEDF3;
-	height: 200px;
+	height: 80px;
 	position: relative;
 }
 
